# tauri-app-test

./: next.config.js  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  os.rs
src-tauri/src/config/: constants.rs  mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/utils/: app_events.rs
src/pages/dashboard/: index.tsx
src/pages/scans/: index.tsx
src/pages/scans/[id]/: index.tsx
