[package]
name = "waldo"
version = "0.1.0"
description = "The world’s first open source video anti-cheat"
authors = ["Waldo Team"]
license = "MIT"
repository = ""
default-run = "waldo"
edition = "2021"
rust-version = "1.57"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }


[dependencies]
tauri = { version = "1.1.1", features = [] }
tauri-plugin-window-state = "0.1"
dark-light = "0.2.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
